2000-07-10 11:43:22  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-threaded-retrieve-headers): Use
	unibyte.
	(nnslashdot-sane-retrieve-headers): Ditto.
	(nnslashdot-request-article): Ditto.

2000-07-10 11:12:32  William M. Perry <wmperry@aventail.com>

	* mailcap.el (mailcap-parse-mimetype-file): 

2000-07-07 23:46:22  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnweb.el (nnweb-insert): Stricter test.
	* webmail.el (webmail-refresh-redirect): Ditto.

2000-07-06 14:17:48  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-decode.el (mm-dissect-multipart): Match the EOL of boundary.

2000-07-05 21:19:22  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnheader.el (nnheader-insert-nov): Remove EOLs of all fields.

2000-07-05  Dave Love  <fx@gnu.org>

	* utf7.el: Doc and header fixes.

	* gnus-sum.el: Doc fixes.

	* gnus-util.el (gnus-point-at-eol, gnus-point-at-bol): Use
	defalias, not fset.

	* flow-fill.el (fill-flowed-point-at-eol)
	(fill-flowed-point-at-bol): Use defalias, not fset.

	* gnus-art.el: Don't alias article-mime-decode-quoted-printable.
	(gnus-Plain-save-name): Delete -- apparently bogus.

2000-07-03 00:12:26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnsoup.el: Use expand-file-name throughout.

2000-07-03 00:07:51  Kjetil Torgrim Homme  <kjetilho@ifi.uio.no>

	* nnmail.el (nnmail-read-incoming-hook): New example.

2000-07-02 23:17:23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-inline-text): Check whether the text has already
	been decoded.

2000-07-04 15:17:05  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-sid-strip): To strip or not to strip?

2000-07-03  Stainless Steel Rat <ratinox@peorth.gweep.net>

	* gnus-sum.el (gnus-recenter): Fix horizontal recenter.

2000-07-03  Simon Josefsson  <simon@josefsson.org>

	* gnus-sum.el (gnus-update-marks): Don't propagate download and
	unsend flags.

2000-07-03  Simon Josefsson  <jas@pdc.kth.se>

	* nnimap.el (nnimap-open-connection): Don't look up virtual server